# 2025_physics_simulation

./: .gitignore  pyproject.toml
code/グループ実装/physics/: sasaki_2d_river.py  sasaki_erosion_with_touch.py
code/第01回_サンプルコード/: exercise_1-1.py  exercise_1-2.py  exercise_1-3.py  exercise_1-4.py  sample_1-1.py  sample_1-10.py  sample_1-2.py  sample_1-3.py  sample_1-4.py  sample_1-5.py  sample_1-6.py  sample_1-7.py  sample_1-8.py  sample_1-9.py
code/第01回_演習コード/: exercise_1-1.py  exercise_1-2.py  exercise_1-3.py  exercise_1-4.py  exercise_1-4_overlap.py  exercise_1-4_sub.py  tutorial.py
code/第02回_サンプルコード/: exercise_2-1.py  exercise_2-2.py  exercise_2-3.py  sample_2-1.py  sample_2-2.py  sample_2-3.py  sample_2-3_complete.py  sample_2-4.py
code/第02回_演習コード/: exercise_2-1.py  exercise_2-2.py  exercise_2-3.py
code/第03回_サンプルコード/: exercise_3-2.py  exercise_3-3.py  exercise_3-4.py  exercise_3-5.py  exercise_3-6.py  exercise_3-7.py  exercise_3-8.py
code/第03回_演習コード/: exercise_3-1.py  exercise_3-2.py  exercise_3-3.py  exercise_3-4.py  exercise_3-5.py  exercise_3-6.py  exercise_3-7.py  exercise_3-8_multiple.py  exercise_3-8_single.py
code/第04回_サンプルコード/: sample_4-0.py  sample_4-0_with_multi_pinned_rigid.py  sample_4-0_with_pinned_rigid.py  sample_4-0_with_rigid.py
